<resources>
    <string name="app_name">Localizacion</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Opciones</string>
    <string name="activar">Activar</string>
    <string name="posicion">Posición actual:</string>
    <string name="provider">Estado proveedor:</string>
    <string name="desactivar">Desactivar</string>
    <string name="precision">Precisión:</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapa">Ver el mapa</string>
    <string name="m1">Satélite</string>
    <string name="m2">Híbrido</string>
    <string name="m3">Terreno</string>
    <string name="m4">Normal</string>
    <string name="descono">Desconocida</string>
    <string name="prove">Proveedor Off</string>
    <string name="yo">Yo</string>
    <string name="lati">Latitud</string>
    <string name="longi">Longitud</string>
    <string name="prodi">Proveedor desactivado</string>
</resources>
